--- a/build.gradle
+++ b/build.gradle
@@ -30,12 +30,22 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     //runtimeOnly 'com.h2database:h2'
-    annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok', 'org.springframework.boot:spring-boot-configuration-processor'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+processResources {
+    from(sourceSets.main.resources.srcDirs) {
+        include '**/*'
+    }
+    into sourceSets.main.output.resourcesDir
+    inputs.files sourceSets.main.runtimeClasspath
+}
+
 
 
