--- a/build.gradle
+++ b/build.gradle
@@ -23,14 +23,17 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.liquibase:liquibase-core'
-    implementation 'org.liquibase:liquibase-groovy-dsl:3.1.1'
-    //implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.1'
+    liquibaseRuntime('org.liquibase:liquibase-groovy-dsl:3.0.3') {
+        exclude group: "org.codehaus.groovy", module: "groovy"
+        exclude group: "org.codehaus.groovy", module: "groovy-sql"
+    }
+    liquibaseRuntime "org.apache.groovy:groovy:4.0.5"
+    liquibaseRuntime "org.apache.groovy:groovy-sql:4.0.5"
     implementation 'org.postgresql:postgresql'
 
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    //runtimeOnly 'com.h2database:h2'
-    annotationProcessor 'org.projectlombok:lombok', 'org.springframework.boot:spring-boot-configuration-processor'
+    annotationProcessor 'org.projectlombok:lombok'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
@@ -38,14 +41,17 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+//
+//sourceSets {
+//    main {
+//        resources {
+//            srcDirs 'src/main/resources'
+//        }
+//    }
+//}
+//
 
-processResources {
-    from(sourceSets.main.resources.srcDirs) {
-        include '**/*'
-    }
-    into sourceSets.main.output.resourcesDir
-    inputs.files sourceSets.main.runtimeClasspath
-}
+
 
 
 
